override project files from nadav

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,6 +59,9 @@ GlobalDefaultServerGameMode=None
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/AIModule.AISystem]
+bEnableDebuggerPlugin=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
